# Outis

./: Cargo.toml
.github/workflows/: rust_build_ci.yaml
src/: main.rs
