[package]
authors = ["Hilan Meyran <hilanmeyran@proton.me>"]
description = "CLI tool to generate 'fake' GitHub activity"
name = "pênelópeia"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/ShawnHeyli/Penelopeia"
publish = false
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4"
clap = { version = "3.2.6", features = ["derive"] }
indicatif = "0.16.2"